# learning-weaviate

./: Makefile  README.md  docker-compose.yml  pyproject.toml  test_weaviate.ipynb
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/utils/: weaviate_client.py
k8s/: grpc-service.yaml
